# plugins

./: README.md
api-vault/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
api-vault/.github/workflows/: ci.yml
api-vault/docs/: API.md  CONFIGURATION.md  PLUGINS.md  SECURITY.md
api-vault/examples/: WALKTHROUGH.md
api-vault/examples/sample_repo/: README.md  pyproject.toml
api-vault/examples/sample_repo/.github/workflows/: ci.yml
api-vault/examples/sample_repo/src/: __init__.py  main.py
api-vault/examples/sample_repo/tests/: __init__.py  test_main.py
api-vault/src/api_vault/: __init__.py  anthropic_client.py  cli.py  config.py  context_packager.py  errors.py  history.py  planner.py  plugins.py  repo_scanner.py  runner.py  schemas.py  secret_guard.py  signal_extractor.py
api-vault/src/api_vault/templates/: __init__.py  prompts.py
api-vault/tests/: __init__.py  test_anthropic_client.py  test_planner.py  test_property_based.py  test_repo_scanner.py  test_runner.py  test_secret_guard.py  test_signal_extractor.py
recall/: EXAMPLES.md  INSTALL.md  README.md  SECURITY.md
recall/.claude-plugin/: plugin.json
recall/agents/: decision-helper.md
recall/commands/: decision-link.md  decision-search.md  decision.md  decisions.md
recall/hooks/: hooks.json
recall/mcp-server/: .env.example  manifest.json  package-lock.json  package.json  tsconfig.json
recall/mcp-server/server/: index.ts
recall/mcp-server/src/db/: queries.ts  schema.ts
recall/mcp-server/src/prompts/: why-prompt.ts
recall/mcp-server/src/resources/: decisions.ts
recall/mcp-server/src/tools/: add-decision.ts  export-decisions.ts  get-decision.ts  link-commit.ts  list-projects.ts  query-decisions.ts
recall/mcp-server/src/utils/: git.ts  search.ts
recall/scripts/: capture-decision.js  detect-decision.js
